fix: pdf service model schema
